# Neural-Acoustic-Echo-Cancellation

./: demo.py  main.py  paper.docx  pyproject.toml
datasets/: checkDelayEchoReference.ipynb  convert2.py  convertToHfArrowFormat.py  download_and_unpack_from_hf.py  generate_data.ipynb  rename.py  upload.py  uploadv2.py  vad_groundtruth.ipynb
source/: TSNN_coarse_fine_Stage.ipynb  inference.ipynb  testBaselineModel.py  train.ipynb  train2.ipynb  train3.ipynb  train5.ipynb
