[project]
name = "neural-aec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "datasets[audio]>=4.4.1",
    "ipykernel>=7.1.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.7",
    "scikit-learn>=1.8.0",
    "soundfile>=0.13.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "wandb>=0.23.1",
    "webrtcvad>=2.0.10",
]

